src/test/resources/LO-2/InvalidPrograms/test_28.lo
// Missing return stmt

int main() {
    int a, b;
    {
        a = 1;
        b = 14368;
        while (((b % 3) > 0)) {
            if (((b%3) = 1)) {
                break;
            }
            else {
                return ~1;
            }
        }
    }
}